--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,5 +1,5 @@
 
-//A directive for the webpages
+<!-- A directive for the webpages -->
     <h1>Solar Products List</h1>
     <p>
       <button id="show-product"><a href="/#/">Show product</a></button>
