--- a/public/partials/product-form.html
+++ b/public/partials/product-form.html
@@ -28,6 +28,7 @@
 		</p>
 		<p>
 			<button type="button" ng-click="save()">save</button>
+      <span>Please enter all the information</span>
 		</p>
 	</form>
 
