--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,3 +105,31 @@ input[type="text"]{
 input[type="text"]:focus {
   background: #fff
 }
+
+span {
+  border-radius: 5px;
+  /*display: block;*/
+  font-size: 1.3em;
+  text-align: center;
+  position: absolute;
+  background: #2F558E;
+  left: 105%;
+  top: 25px;
+  width: 160px;
+  padding: 7px 10px;
+  color: #fff;
+}
+/*span:after {
+  right: 100%;
+  top: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(136, 183, 213, 0);
+  border-right-color: #2F558E;
+  border-width: 8px;
+  margin-top: -8px;
+}*/
