--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,7 +111,7 @@ span {
   /*display: block;*/
   font-size: 1.3em;
   text-align: center;
-  position: absolute;
+  /*position: absolute;*/
   background: #2F558E;
   left: 105%;
   top: 25px;
